NEWS for Seq66 0.99.16
Chris Ahlstrom
2015-07-10 to 2024-11-02

# Change Log

## [0.99.16]

### Changed

- Refined documentation about the Import/Export functionality.

### Fixed

- Fixed the display of tunes with various PPQNs such as 120.

### Added

- Added 120 PPQN to the list of supported PPQNs.

## [0.99.15]

### Added

- Added edit fields and buttons for selecting a non-default browser
  or PDF viewer to the Preference's Session tab.

### Fixed

- Some font handling in the various tabs and windows.
- Cleaned up the configuration dialogs.
- The file-selection dialog(s) when no file-extension is used.
- An error in getting the name of the mutes file in the Preference's
  Session tab.

### Changed

- Updating configure.ac to disable, and not allow enabling, of JACK,
  NSM, and liblo (OSC) if libraries not installed.
- Progress made getting a build to work in MSYS2. Not yet ready.
- Built on Windows 11 with a update to Qt 5.15.2 and mingw 8.10.

## [0.99.14]

### Added

- Added the use of the Esc key to close the external song editor window
  if not playing and not in adding mode. Similar to the fix made to
  the pattern editor for issue #117.
- Added the elliptical progress-box option to Preferences / Display.
- In the pattern editor, a tiny unlabelled button toggles the
  showing of note information when the mouse hovers over a note.
- Added a note-tooltip option. Click the unlabelled button at the left of the
  horizontal scroll-bar. Then hovering over a note shows some note information.

### Fixed

- In the zoomer class, rearranged members to avoid a warning (error)
  from g++ v. 14.2.1 about zoom being uninitialized in the constructor.
- Issue #128 "Recording type for loop button not working". Fixes the
  Issue in both directions.
- Issue #129 "Quantized Record Button problem" fixed by allowing
  the existing sequence recording status to be modified with an alteration.
- Tightened up the handling of selecting a pattern's input buss.

### Changed
